[tool.poetry]
name = "schedulark"
version = "0.1.0"
description = "Job Scheduling Library"
authors = ["Knowark"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
bump2version = "^1.0.1"
mypy = "^0.910"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
